--- a/views/home.erb
+++ b/views/home.erb
@@ -1,12 +1,18 @@
+<div class = "page">
 <h1>Welcome to our Rock Paper Scissors Game</h1>
+</div>
+<div class = "page">
 <ol>
   <li>Paper beats rock</li>
   <li>Scissors beats paper</li>
   <li>Rock beats scissors</li>
 </ol>
+</div>
+<div class = "page">
 <ul>
 <li><a href = "play/rock">play as rock</a></li>
 <li><a href = "play/paper">play as paper</a></li>
 <li><a href = "play/scissors">play as scissors</a></li>
 <li><a href = "play/banana">play as banana</a></li>
 </ul>
+</div>
