--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,11 +10,36 @@
     <nav>
      <ul>
        <li><a href="/">home</a></li>
-
-     </ul>
+    </ul>
    </nav>
+  <div class = "page"
     <h1>Let's play the Game</h1>
+    </div>
 
+
+  <div class = "page"
        <%= yield %>
+  </div>
+
+
+    <div class = "page"
+
+       </div>
+
+         <div class = "page"
+
+            </div>
+
+              <div class = "page"
+
+                 </div>
+  <div class = "page"
+
+     </div>
+    <!-- <div class = "page"
+       <footer>
+         <p id="rights">&copy;lidek</p>
+       </footer>
+       </div> -->
   </body>
 </html>
