--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,45 +1,33 @@
-<!DOCTYPE html>
-<html lang='en'>
-  <head>
-    <meta charset='utf-8'>
-    <title>Rock Paper Scissors</title>
-    <link rel='stylesheet' href='/style.css'
-  </head>
-  <body>
+  <!DOCTYPE html>
+  <html lang='en'>
+    <head>
+      <meta charset='utf-8'>
+      <title>Rock Paper Scissors</title>
+      <link rel='stylesheet' href='/style.css'
+    </head>
+    <body>
 
-    <nav>
-     <ul>
-       <li><a href="/">home</a></li>
-    </ul>
-   </nav>
-  <div class = "page"
-    <h1>Let's play the Game</h1>
-    </div>
+      <nav>
+       <ul>
+         <h2>Let's play a game</h2>
+      <button> <li><a href="/">home</a></li>        </button>
+      </ul>
+     </nav>
 
-
-  <div class = "page"
-       <%= yield %>
-  </div>
+  <div class ="body"
 
 
-    <div class = "page"
+         <%= yield %>
 
-       </div>
 
-         <div class = "page"
 
-            </div>
+                   </div>
 
-              <div class = "page"
 
-                 </div>
-  <div class = "page"
 
-     </div>
-    <!-- <div class = "page"
-       <footer>
-         <p id="rights">&copy;lidek</p>
-       </footer>
-       </div> -->
-  </body>
-</html>
+          <footer>
+           <p id="rights">&copy;lidek</p>
+         </footer>
+         </div>
+    </body>
+  </html>
